--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment",
+  "name": "fake-radar-web-scrapping",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
